# govprep

./: .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  SECURITY.md  api_test.py  app.py  app_test.py  cloudbuild.backend.yaml  cloudbuild.frontend.yaml  db.py  evaluation.md  govprep_v0.py  govprep_v1.py  main.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: api.py  frontend.py
data/: .gitkeep
database/: schema.sql
db/: chroma.sqlite3
db/656387d0-eefc-4817-8189-185e18bafc4c/: index_metadata.pickle
db/81d2a702-f4cb-4065-946d-bf115d1603cb/: index_metadata.pickle
db/ef1a19f2-9033-4df3-bc0e-2ca7008e826b/: index_metadata.pickle
eval/: gold_set.json  pg_score.py  result.md  results.md  score.py  score_v2.py  sweep.py
legacy/: README.md
legacy/chromadb/: generate.py  hybrid_search.py  ingest_multi.py  ingest_v2.py  retrieve.py  retrieve_multi.py  retrieve_v2.py
legacy/experiments/: check_pgvector.py  langgraph_test.py
legacy/migrations/: backfill_chroma_to_pgvector.py
legacy/versions/: govprep_v1.py  (+1 more)
scripts/: agent.py  agent_test.py  backfill_pgvector.py  bm25_search.py  build_vector_db.py  full_text_search.py  generate.py  generate_v1.py  hybrid_search.py  ingest_multi.py  ingest_v2.py  judge.py  langgraph_agent.py  llm.py  pg_hybrid_search.py  retrieve_multi.py  retrieve_pgvector.py  retrieve_v2.py  rewrite.py  search.py  test_embeddings.py  test_pgvector.py
tests/: test_api.py  test_eval.py  test_search.py  test_smoke.py
(+12 files in other folders)
